# Eightfold_assignment

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: default_schema.json
docs/: design.md
samples/expected/: jane_custom.json  jane_default.json  output_custom.json  output_default.json
samples/inputs/: ats.json  malformed.json  recruiter.csv
samples/inputs/github/: janedoe.json
samples/inputs/notes/: jane.txt
samples/manual_test/: README.md  ats.json  malformed.json  recruiter.csv
samples/manual_test/github/: carlosr.json  fatima.json  meilin.json  tombaker.json
samples/manual_test/notes/: carlos.txt  fatima.txt  john-a.txt  john-b.txt  robert.txt  tom.txt
src/eightfold/: __init__.py  _text.py  cli.py  confidence.py  detect.py  fuse.py  models.py  pipeline.py  project.py  resolve.py  validate.py
src/eightfold/llm/: extractor.py
src/eightfold/normalize/: __init__.py  country.py  dates.py  phone.py  skills.py
src/eightfold/sources/: ats_json.py  base.py  github_client.py  recruiter_csv.py  recruiter_notes.py
tests/: test_edgecases.py  test_fusion.py  test_normalize.py  test_pipeline_e2e.py  test_projection.py  test_review2.py  test_review_fixes.py
web/: app.py
