[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eightfold-profile-transformer"
version = "0.1.0"
description = "Turn messy multi-source candidate data into one clean, canonical, provenance-tagged profile with a config-driven projection layer."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Amith KM", email = "officialinternetzero@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5",
    "phonenumbers>=8.13",
    "pycountry>=23.12",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
llm = ["anthropic>=0.69"]
dev = ["pytest>=8.0", "ruff>=0.6", "mypy>=1.8"]

[project.scripts]
eightfold = "eightfold.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
eightfold = ["py.typed"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]  # long lines tolerated in dense docstrings/data tables

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
